# projector-os

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
.claude/: settings.json
data/: camera_roi.json  work_surface.json
scripts/: start.sh
server/: bus.py  calibration.py  camera.py  camera_roi.py  cameras.py  detection.py  displays.py  launcher.py  main.py  preferences.py  protocol.py  work_surface.py
ui/: control.css  control.html  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui/projector/: index.html
ui/src/: calibration.ts  control.ts  hand-overlay.ts  main.ts  overlay.ts  types.ts  work-surface-overlay.ts  ws-client.ts
ui/src/control/: control.ts
ui/src/projector/: calibration.ts  hand-overlay.ts  main.ts  overlay.ts  work-surface-overlay.ts
ui/src/projector/render/: homography.ts  renderer.ts  svg-renderer.ts
ui/src/render/: html-renderer.ts  svg-renderer.ts
