[project]
name = "projectoros"
version = "0.1.0"
description = "Projector + camera platform. First app: craft cutting-mat assistant."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "opencv-contrib-python>=4.10",
    "numpy>=1.26",
    "pydantic>=2.9",
    "mediapipe>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
